--- a/overlay/common/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/common/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -17,5 +17,6 @@
  */
 -->
 <resources>
+    <bool name="def_install_non_market_apps">true</bool>
     <string name="def_backup_transport">com.google.android.backup/.BackupTransportService</string>
 </resources>
