--- a/overlay/software_gl/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/software_gl/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -19,4 +19,6 @@
 <resources>
     <fraction name="def_window_animation_scale">0%</fraction>
     <fraction name="def_window_transition_scale">0%</fraction>
+    <bool name="def_electron_beam_animation_on">false</bool>
+    <bool name="def_electron_beam_animation_off">false</bool>
 </resources>
